added dockerfile to prod

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,9 @@
 CLIENT_GATEWAY_PORT=3000
+PAYMENTS_MS_PORT=3003
+STRIPE_SECRET=
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+STRIPE_ENDPOINT_SECRET=
+AUTH_DATABASE_URL=mongodb://localhost:27017
+JWT_SECRET=EstoDeEds3rUnString
+ORDERS_DATABASE_URL=postgresql://****:****@ep-fragrant-art-a5gq0oei.us-east-2.aws.neon.tech/orders-db?sslmode=require
